lib/rl_bindings.h

void SetWindowIcon_(Image *a);
Vector2 *GetMonitorPosition_(int a);
Vector2 *GetWindowPosition_();
Vector2 *GetWindowScaleDPI_();
void ClearBackground_(Color *a);
void BeginMode2D_(Camera2D *a);
void BeginMode3D_(Camera3D *a);
void BeginTextureMode_(RenderTexture *a);
void BeginShaderMode_(Shader *a);
void BeginVrStereoMode_(VrStereoConfig *a);
VrStereoConfig *LoadVrStereoConfig_(VrDeviceInfo *a);
void UnloadVrStereoConfig_(VrStereoConfig *a);
Shader *LoadShader_(char *a, char *b);
Shader *LoadShaderFromMemory_(char *a, char *b);
bool IsShaderReady_(Shader *a);
int GetShaderLocation_(Shader *a, char *b);
int GetShaderLocationAttrib_(Shader *a, char *b);
void SetShaderValue_(Shader *a, int b, const void *c, int d);
void SetShaderValueV_(Shader *a, int b, const void *c, int d, int e);
void SetShaderValueMatrix_(Shader *a, int b, Matrix *c);
void SetShaderValueTexture_(Shader *a, int b, Texture *c);
void UnloadShader_(Shader *a);
Ray *GetMouseRay_(Vector2 *a, Camera3D *b);
Matrix *GetCameraMatrix_(Camera3D *a);
Matrix *GetCameraMatrix2D_(Camera2D *a);
Vector2 *GetWorldToScreen_(Vector3 *a, Camera3D *b);
Vector2 *GetScreenToWorld2D_(Vector2 *a, Camera2D *b);
Vector2 *GetWorldToScreenEx_(Vector3 *a, Camera3D *b, int c, int d);
Vector2 *GetWorldToScreen2D_(Vector2 *a, Camera2D *b);